user detailed analytics page updated, shows start date, end data of avalible data. another .py script used for testing purposes. updaed some ui files to show correct date format

--- a/UserList.ui
+++ b/UserList.ui
@@ -77,7 +77,10 @@ color: rgb(255,255,255);</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">QWidget#UserListTable{
+background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(170, 255, 255, 255), stop:0.0113636 rgba(167, 199, 231, 255), stop:1 rgba(0, 128, 128, 255))};
+font: 16pt &quot;Corbel&quot;;
+</string>
     </property>
     <column>
      <property name="text">
@@ -92,6 +95,13 @@ color: rgb(255,255,255);</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
+     </property>
+     <property name="background">
+      <color>
+       <red>169</red>
+       <green>199</green>
+       <blue>231</blue>
+      </color>
      </property>
     </column>
     <column>
@@ -108,6 +118,13 @@ color: rgb(255,255,255);</string>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
+     <property name="background">
+      <color>
+       <red>169</red>
+       <green>199</green>
+       <blue>231</blue>
+      </color>
+     </property>
     </column>
     <column>
      <property name="text">
@@ -123,6 +140,13 @@ color: rgb(255,255,255);</string>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
+     <property name="background">
+      <color>
+       <red>169</red>
+       <green>199</green>
+       <blue>231</blue>
+      </color>
+     </property>
     </column>
     <column>
      <property name="text">
@@ -137,6 +161,13 @@ color: rgb(255,255,255);</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
+     </property>
+     <property name="background">
+      <color>
+       <red>169</red>
+       <green>199</green>
+       <blue>231</blue>
+      </color>
      </property>
     </column>
    </widget>
