--- a/UserDetailedAnalyticsSelectionPage.ui
+++ b/UserDetailedAnalyticsSelectionPage.ui
@@ -142,27 +142,54 @@ color: rgb(255,255,255);</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="infoText_2">
-       <property name="font">
-        <font>
-         <family>Corbel</family>
-         <pointsize>16</pointsize>
-         <weight>50</weight>
-         <italic>false</italic>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">font: 16pt &quot;Corbel&quot;;
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="infoText_2">
+         <property name="font">
+          <font>
+           <family>Corbel</family>
+           <pointsize>16</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 16pt &quot;Corbel&quot;;
 color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string>Start Date:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
+         </property>
+         <property name="text">
+          <string>Input Start Date:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="infoText_7">
+         <property name="font">
+          <font>
+           <family>Corbel</family>
+           <pointsize>16</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 16pt &quot;Corbel&quot;;
+color: rgb(255,255,255);</string>
+         </property>
+         <property name="text">
+          <string>(YYYY-MM-DD)</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QDateEdit" name="StartDate">
@@ -170,36 +197,115 @@ color: rgb(255,255,255);</string>
         <string notr="true">font: 20pt &quot;Corbel&quot;;
 </string>
        </property>
+       <property name="dateTime">
+        <datetime>
+         <hour>0</hour>
+         <minute>0</minute>
+         <second>0</second>
+         <year>2023</year>
+         <month>1</month>
+         <day>1</day>
+        </datetime>
+       </property>
+       <property name="time">
+        <time>
+         <hour>0</hour>
+         <minute>0</minute>
+         <second>0</second>
+        </time>
+       </property>
+       <property name="displayFormat">
+        <string>yyyy-M-d</string>
+       </property>
+       <property name="calendarPopup">
+        <bool>true</bool>
+       </property>
+       <property name="timeSpec">
+        <enum>Qt::OffsetFromUTC</enum>
+       </property>
+       <property name="date">
+        <date>
+         <year>2023</year>
+         <month>1</month>
+         <day>1</day>
+        </date>
+       </property>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="infoText_3">
-       <property name="font">
-        <font>
-         <family>Corbel</family>
-         <pointsize>16</pointsize>
-         <weight>50</weight>
-         <italic>false</italic>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">font: 16pt &quot;Corbel&quot;;
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="infoText_8">
+         <property name="font">
+          <font>
+           <family>Corbel</family>
+           <pointsize>16</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 16pt &quot;Corbel&quot;;
 color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string>End Date:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
+         </property>
+         <property name="text">
+          <string>Input End Date:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="infoText_9">
+         <property name="font">
+          <font>
+           <family>Corbel</family>
+           <pointsize>16</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 16pt &quot;Corbel&quot;;
+color: rgb(255,255,255);</string>
+         </property>
+         <property name="text">
+          <string>(YYYY-MM-DD)</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QDateEdit" name="EndDate">
        <property name="styleSheet">
         <string notr="true">font: 20pt &quot;Corbel&quot;;
 </string>
+       </property>
+       <property name="dateTime">
+        <datetime>
+         <hour>0</hour>
+         <minute>0</minute>
+         <second>0</second>
+         <year>2023</year>
+         <month>3</month>
+         <day>21</day>
+        </datetime>
+       </property>
+       <property name="currentSection">
+        <enum>QDateTimeEdit::DaySection</enum>
+       </property>
+       <property name="displayFormat">
+        <string>yyyy-M-d</string>
+       </property>
+       <property name="calendarPopup">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -238,7 +344,7 @@ color: rgb(255,255,255);</string>
 color: rgb(255,255,255);</string>
        </property>
        <property name="text">
-        <string>Ended:</string>
+        <string>Last Avaliable Date:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -261,7 +367,7 @@ color: rgb(255,255,255);</string>
 color: rgb(255,255,255);</string>
        </property>
        <property name="text">
-        <string>TempDate</string>
+        <string/>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -284,7 +390,7 @@ color: rgb(255,255,255);</string>
 color: rgb(255,255,255);</string>
        </property>
        <property name="text">
-        <string>TempDate</string>
+        <string/>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -330,7 +436,7 @@ color: rgb(255,255,255);</string>
 color: rgb(255,255,255);</string>
        </property>
        <property name="text">
-        <string>Began:</string>
+        <string>Start Date:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -378,16 +484,6 @@ color: rgb(255,255,255);</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="pushButton_3">
-       <property name="styleSheet">
-        <string notr="true">font: 14pt &quot;Corbel&quot;;</string>
-       </property>
-       <property name="text">
-        <string>&quot;Jerkiness&quot; Movement Count Per Day</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="0">
       <widget class="QPushButton" name="pushButton">
        <property name="styleSheet">
@@ -395,7 +491,7 @@ color: rgb(255,255,255);</string>
 </string>
        </property>
        <property name="text">
-        <string>Speed vs. Heartrate Line Graph</string>
+        <string>Heart Rate Over Time Graph</string>
        </property>
       </widget>
      </item>
@@ -407,16 +503,6 @@ color: rgb(255,255,255);</string>
        </property>
        <property name="text">
         <string>More Coming Soon</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="styleSheet">
-        <string notr="true">font: 14pt &quot;Corbel&quot;;</string>
-       </property>
-       <property name="text">
-        <string>Average Resting Period on Chair Bar Graph</string>
        </property>
       </widget>
      </item>
@@ -444,6 +530,28 @@ color: rgb(255,255,255);</string>
      </item>
      <item row="2" column="2">
       <widget class="QPushButton" name="pushButton_9">
+       <property name="styleSheet">
+        <string notr="true">font: 16pt &quot;Corbel&quot;;
+</string>
+       </property>
+       <property name="text">
+        <string>More Coming Soon</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_10">
+       <property name="styleSheet">
+        <string notr="true">font: 16pt &quot;Corbel&quot;;
+</string>
+       </property>
+       <property name="text">
+        <string>More Coming Soon</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="pushButton_11">
        <property name="styleSheet">
         <string notr="true">font: 16pt &quot;Corbel&quot;;
 </string>
@@ -553,10 +661,8 @@ background-color: rgb(147, 136, 162)</string>
   <tabstop>pushButton</tabstop>
   <tabstop>pushButton_4</tabstop>
   <tabstop>pushButton_7</tabstop>
-  <tabstop>pushButton_2</tabstop>
   <tabstop>pushButton_5</tabstop>
   <tabstop>pushButton_8</tabstop>
-  <tabstop>pushButton_3</tabstop>
   <tabstop>pushButton_6</tabstop>
   <tabstop>pushButton_9</tabstop>
   <tabstop>Submit</tabstop>
